force-app/main/default/objects/Tickets__c/Tickets__c.object-meta.xml
<CustomObject>
    <label>Tickets</label>
    <nameField>
        <label>Tickets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>