force-app/main/default/objects/Tickets__c/fields/descripcion_incidencia__c.field-meta.xml
<CustomField>
    <fullName>descripcion_incidencia__c</fullName>
    <description>se describe la incidencia</description>
    <label>descripcion_incidencia</label>
    <type>TextArea</type>
</CustomField>