force-app/main/default/objects/Tickets__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>permite agregar si es necesariio</description>
    <label>ImagenURL</label>
    <type>Url</type>
</CustomField>