force-app/main/default/objects/Tickets__c/fields/imagenagregada__c.field-meta.xml
<CustomField>
    <fullName>imagenagregada__c</fullName>
    <description>agrega una imagen de ser necesario</description>
    <formula>IMAGE(Image_URL__c,&quot;imagen incidencia&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>imagen agregada</label>
    <type>Text</type>
</CustomField>