force-app/main/default/objects/Tickets__c/fields/meses__c.field-meta.xml
<CustomField>
    <fullName>meses__c</fullName>
    <label>meses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>meses</valueSetName>
    </valueSet>
</CustomField>