force-app/main/default/objects/Tickets__c/fields/Reinicidencia__c.field-meta.xml
<CustomField>
    <fullName>Reinicidencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinicidencia</label>
    <type>Checkbox</type>
</CustomField>