force-app/main/default/objects/Tickets__c/fields/Tipo_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Incidencia__c</fullName>
    <label>TipoIncidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CAIDA DE INTERNET</fullName>
                <default>true</default>
                <label>CAIDA DE INTERNET</label>
            </value>
            <value>
                <fullName>FALLA DE LUZ</fullName>
            </value>
            <value>
                <fullName>SIN FICHAS</fullName>
            </value>
            <value>
                <fullName>VULNERACIONES,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>