force-app/main/default/objects/Tickets__c/fields/TipoContratacion__c.field-meta.xml
<CustomField>
    <fullName>TipoContratacion__c</fullName>
    <label>TipoContratacion</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CELULAR</fullName>
                <default>true</default>
                <label>CELULAR</label>
            </value>
            <value>
                <fullName>FICHAS</fullName>
            </value>
            <value>
                <fullName>RESIDENCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>